// protos/v1/user/user.proto
//protoc -I . --go_out . --go_opt paths=source_relative --go-grpc_out . --go-grpc_opt paths=source_relative protos/v1/user/user.proto


syntax = "proto3";

package v1.user;

import "google/protobuf/empty.proto";
import "protos/v1/common/common.proto";

option go_package = "github.com/sy-yoon/krealtors/protos/v1/user";

service UserService {
    rpc GetUser(GetUserRequest) returns (User);
    rpc GetUserByEmail(GetUserRequest) returns (User);
    rpc ListUsers(ListUsersRequest) returns (ListUsersResponse);
    rpc CreateUser(User) returns (User);
    rpc UpdateUser(User) returns (User);
    rpc DeleteUser(DeleteUserRequest) returns (google.protobuf.Empty);
}

message User {
    int64 id = 1;
    string password = 2;
    string name = 3;
    string email = 4;
    string photourl = 5;
    string locale = 6;
    string sns_provider = 7;
    string created_date = 8;
    string updated_date = 9;
}

message ListUsersRequest {
    v1.common.ListParameters query = 1;
}

message ListUsersResponse {
  repeated User users = 1;
}

message GetUserRequest {
    int64 id = 1;
    string email = 2;
}

message DeleteUserRequest {
    int64 id = 1;
}

